[gd_scene load_steps=29 format=3 uid="uid://c8r6mdhoyk1b0"]

[ext_resource type="Script" path="res://scripts/player/PlayerTemplate.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cpbyg6l566n36" path="res://sprites/player/human_new/new_human_south.tres" id="2_lrlmc"]
[ext_resource type="Texture2D" uid="uid://c3s5lw0imu84p" path="res://sprites/particles/04_Complex/Smoke/smoke3_17_thumbnail.png" id="2_pwlbr"]
[ext_resource type="Texture2D" uid="uid://dtlwr3dg3tdr7" path="res://sprites/player/human_new/animated/walking.png" id="3_nn7fd"]

[sub_resource type="Gradient" id="Gradient_sa3e6"]
offsets = PackedFloat32Array(0, 0.546099, 0.985816)
colors = PackedColorArray(0.917647, 0.917647, 0.917647, 0.52549, 0.901961, 0.901961, 0.901961, 0.533333, 0.368627, 0.368627, 0.368627, 0)

[sub_resource type="CircleShape2D" id="1"]
radius = 13.0384

[sub_resource type="AtlasTexture" id="AtlasTexture_h8i8t"]
atlas = ExtResource("3_nn7fd")
region = Rect2(0, 0, 33, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_utrkc"]
atlas = ExtResource("3_nn7fd")
region = Rect2(33, 0, 33, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_brjgj"]
atlas = ExtResource("3_nn7fd")
region = Rect2(66, 0, 33, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_1315a"]
atlas = ExtResource("3_nn7fd")
region = Rect2(99, 0, 33, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5h2w"]
atlas = ExtResource("3_nn7fd")
region = Rect2(132, 0, 33, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpwe7"]
atlas = ExtResource("3_nn7fd")
region = Rect2(165, 0, 33, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_v2wym"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8i8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utrkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brjgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1315a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5h2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpwe7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kvp6m"]
atlas = ExtResource("3_nn7fd")
region = Rect2(0, 52, 33, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_u54rv"]
atlas = ExtResource("3_nn7fd")
region = Rect2(33, 52, 33, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_18wqr"]
atlas = ExtResource("3_nn7fd")
region = Rect2(66, 52, 33, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wwi4"]
atlas = ExtResource("3_nn7fd")
region = Rect2(99, 52, 33, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1x7r"]
atlas = ExtResource("3_nn7fd")
region = Rect2(132, 52, 33, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjhks"]
atlas = ExtResource("3_nn7fd")
region = Rect2(165, 52, 33, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_rqo5g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvp6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u54rv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18wqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wwi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1x7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjhks")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_jw01y"]
atlas = ExtResource("3_nn7fd")
region = Rect2(0, 104, 33, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu7v6"]
atlas = ExtResource("3_nn7fd")
region = Rect2(33, 104, 33, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vujp"]
atlas = ExtResource("3_nn7fd")
region = Rect2(66, 104, 33, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7erl"]
atlas = ExtResource("3_nn7fd")
region = Rect2(99, 104, 33, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5gli"]
atlas = ExtResource("3_nn7fd")
region = Rect2(132, 104, 33, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cg1y"]
atlas = ExtResource("3_nn7fd")
region = Rect2(165, 104, 33, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_f2jwa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw01y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu7v6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vujp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7erl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5gli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cg1y")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_xrg0k"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:direction")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath(".:moving")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath(".:dashing")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false
properties/4/path = NodePath(".:running")
properties/4/spawn = true
properties/4/sync = true
properties/4/watch = false

[node name="PlayerTemplate" type="CharacterBody2D" groups=["players"]]
collision_layer = 15
collision_mask = 0
input_pickable = true
script = ExtResource("1")

[node name="dashsmoke" type="CPUParticles2D" parent="."]
emitting = false
amount = 250
lifetime = 0.5
texture = ExtResource("2_pwlbr")
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 150.0
initial_velocity_max = 250.0
damping_min = 45.0
damping_max = 50.0
scale_amount_min = 0.2
scale_amount_max = 0.2
color_ramp = SubResource("Gradient_sa3e6")

[node name="Icon" type="Sprite2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-8, 2, -1, -19, 9, 2, 5, 21, 0, 22, -5, 22)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
use_parent_material = true
texture = ExtResource("2_lrlmc")

[node name="animations" type="Node2D" parent="."]
texture_filter = 1
use_parent_material = true

[node name="walk_east" type="AnimatedSprite2D" parent="animations"]
visible = false
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_v2wym")

[node name="walk_west" type="AnimatedSprite2D" parent="animations"]
visible = false
use_parent_material = true
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_v2wym")

[node name="walk_south" type="AnimatedSprite2D" parent="animations"]
visible = false
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_rqo5g")
frame = 3
frame_progress = 0.808604

[node name="walk_north" type="AnimatedSprite2D" parent="animations"]
visible = false
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_f2jwa")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_xrg0k")

[connection signal="input_event" from="." to="." method="_on_input_event"]
